CsNotes: Fixed MenuBar Overlapping with NavBar

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,7 +66,7 @@
     .menubar {
         border-radius: 5px;
         position: absolute;
-        top: 6.6rem;
+        top: 7rem;
         z-index: 111;
         margin-top: 0.1rem;
         margin-left: 0.1rem;
